# sql-insight

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: compatibility-matrix.yml  nightly-full-matrix.yml  pr-gate.yml
contracts/: unified-record-v1.schema.json
src/: collection.rs  level0.rs  level1.rs  lib.rs  main.rs  pipeline.rs  postgres_level0.rs
tests/: contract_schema.rs
tests/compose/: docker-compose.yml  mysql-init.sql  mysql57.cnf  postgres-init.sql
tests/contracts/golden/: matrix-summary.full.json  matrix-summary.smoke.json
tests/golden/log_parsing/: mysql_alerts.json  mysql_digests.json  postgres_alerts.json  postgres_digests.json
tests/scripts/: check-budget.sh  check-contract.sh  common.sh  run-matrix.sh  run-resilience.sh
