[package]
name = "sql-insight"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.53", features = ["derive", "env"] }
mysql = "26.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
